@@ -22,34 +22,21 @@ repositories {
     mavenCentral()
 }
 
-ext {
-    set('testcontainersVersion', "1.20.4")
-}
-
 dependencies {
-    implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
-    implementation 'org.flywaydb:flyway-core'
-    implementation 'org.flywaydb:flyway-database-hsqldb'
-    runtimeOnly 'com.h2database:h2'
+    implementation 'org.springframework.boot:spring-boot-starter'
     implementation group: 'com.google.guava', name: 'guava', version: '33.4.0-jre'
     compileOnly 'org.projectlombok:lombok:1.18.42'
     annotationProcessor 'org.projectlombok:lombok:1.18.42'
     testCompileOnly 'org.projectlombok:lombok:1.18.42'
     testAnnotationProcessor 'org.projectlombok:lombok:1.18.42'
     testImplementation 'org.springframework.boot:spring-boot-starter-test'
-    testImplementation 'org.testcontainers:junit-jupiter'
     testImplementation 'org.springframework.boot:spring-boot-starter-web'
-    testImplementation 'org.openjdk.jol:jol-core:0.17'
+    testImplementation 'org.springframework.boot:spring-boot-testcontainers'
+    testImplementation 'org.testcontainers:testcontainers-junit-jupiter'
 }
 
 tasks.named('test') {
     useJUnitPlatform()
-}
-
-dependencyManagement {
-    imports {
-        mavenBom "org.testcontainers:testcontainers-bom:${testcontainersVersion}"
-    }
 }
 
 jacocoTestReport {
@@ -100,8 +87,4 @@ snyk {
     api = System.getenv('SNYK_TOKEN')
     autoDownload = true
     autoUpdate = true
-}
-
-tasks.withType(JavaExec) {
-    jvmArgs("-Djdk.attach.allowAttachSelf")
 }
